bitsandbytes/bnb/tests/ui/bin_codec_multi_field.stderr
error: `codec` applies to a single-field tuple struct (a newtype), e.g. `#[bin(codec = bnb::codecs::leb128)] pub struct Varint(pub u64);` — for a one-off field use `#[br(parse_with = …)]`/`#[bw(write_with = …)]` instead
 --> tests/ui/bin_codec_multi_field.rs:5:8
  |
5 | struct Pair(u64, u64);
  |        ^^^^
